<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
	xmlns:app = "http://schemas.android.com/apk/res-auto"
	xmlns:tools = "http://schemas.android.com/tools"
	android:layout_width = "match_parent"
	android:layout_height = "match_parent"
	android:background = "@drawable/bg_main"
	app:layout_behavior = "@string/appbar_scrolling_view_behavior"
	tools:context = "pbl.g12.sem1.FILUSH.SignUpActivity"
	tools:showIn = "@layout/activity_signup_personal">

	<!-- Display Name Label -->
	<android.support.design.widget.TextInputLayout
		android:id = "@+id/name_textInputLayout"
		android:layout_width = "match_parent"
		android:layout_height = "wrap_content"
		android:layout_marginEnd = "8dp"
		android:layout_marginStart = "8dp"
		android:layout_marginTop = "80dp"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toTopOf = "parent">

		<AutoCompleteTextView
			android:id = "@+id/p_signup_input_name"
			android:layout_width = "match_parent"
			android:layout_height = "wrap_content"
			android:hint = "@string/prompt_display_name"
			android:inputType = "textCapWords"
			android:maxLines = "1"
			android:singleLine = "true" />
	</android.support.design.widget.TextInputLayout>

	<!-- Email Label -->
	<android.support.design.widget.TextInputLayout
		android:id = "@+id/email_textInputLayout"
		android:layout_width = "match_parent"
		android:layout_height = "wrap_content"
		android:layout_marginEnd = "8dp"
		android:layout_marginStart = "8dp"
		android:layout_marginTop = "8dp"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toBottomOf = "@+id/name_textInputLayout">

		<AutoCompleteTextView
			android:id = "@+id/p_signup_input_email"
			android:layout_width = "match_parent"
			android:layout_height = "wrap_content"
			android:hint = "@string/prompt_email"
			android:inputType = "textEmailAddress"
			android:maxLines = "1"
			android:singleLine = "true" />
	</android.support.design.widget.TextInputLayout>

	<!-- Password Label -->
	<android.support.design.widget.TextInputLayout
		android:id = "@+id/pass_textInputLayout"
		android:layout_width = "match_parent"
		android:layout_height = "wrap_content"
		android:layout_marginEnd = "8dp"
		android:layout_marginStart = "8dp"
		android:layout_marginTop = "8dp"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toBottomOf = "@+id/email_textInputLayout">

		<EditText
			android:id = "@+id/p_signup_input_password"
			android:layout_width = "match_parent"
			android:layout_height = "wrap_content"
			android:hint = "@string/prompt_password"
			android:imeActionId = "6"
			android:imeActionLabel = "@string/signup_label"
			android:imeOptions = "actionUnspecified"
			android:inputType = "textPassword"
			android:maxLines = "1"
			android:singleLine = "true" />
	</android.support.design.widget.TextInputLayout>

	<!-- Sign-up Button -->
	<android.support.v7.widget.AppCompatButton
		android:id="@+id/p_signup_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="28dp"
		android:padding="12dp"
		android:text="@string/signup_button_text"
		app:layout_constraintBottom_toTopOf="@+id/link_login"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/pass_textInputLayout"
		app:layout_constraintVertical_bias="0.704" />

	<!-- Login Link -->
	<TextView
		android:id = "@+id/link_login"
		android:layout_width = "fill_parent"
		android:layout_height = "wrap_content"
		android:layout_marginBottom = "24dp"
		android:layout_marginEnd = "8dp"
		android:layout_marginStart = "8dp"
		android:gravity = "center"
		android:text = "@string/login_link_label"
		android:textSize = "16sp"
		app:layout_constraintBottom_toBottomOf = "parent"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintHorizontal_bias = "0.75"
		app:layout_constraintStart_toStartOf = "parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pass_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_textInputLayout">

        <EditText
            android:id="@+id/p_signup_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Birthdate"
            android:imeActionId="6"
            android:imeActionLabel="@string/signup_label"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>


</android.support.constraint.ConstraintLayout>

