<android.support.constraint.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:background = "@drawable/bg_main"
    android:paddingLeft = "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "56dp"
    tools:context="pbl.g12.sem1.FILUSH.LoginActivity" >


    <!-- Email Label -->
    <android.support.design.widget.TextInputLayout
        android:id = "@+id/emailInputLayout"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_marginEnd = "8dp"
        android:layout_marginStart = "8dp"
        android:layout_marginTop = "72dp"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintHorizontal_bias = "0.75"
        app:layout_constraintStart_toStartOf = "parent" >

        <AutoCompleteTextView
            android:id = "@+id/login_input_email"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:hint = "@string/prompt_email"
            android:inputType = "textEmailAddress"
            android:maxLines = "1"
            android:singleLine = "true" />
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:id = "@+id/passInputLayout"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_marginEnd = "8dp"
        android:layout_marginStart = "8dp"
        android:layout_marginTop = "8dp"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/emailInputLayout">

        <EditText
            android:id = "@+id/login_input_password"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:hint = "@string/prompt_password"
            android:imeActionId = "6"
            android:imeActionLabel = "@string/prompt_password"
            android:imeOptions = "actionUnspecified"
            android:inputType = "textPassword"
            android:maxLines = "1"
            android:singleLine = "true" />
    </android.support.design.widget.TextInputLayout>



    <!-- Email Login Button -->
    <android.support.v7.widget.AppCompatButton
        android:id = "@+id/email_login_button"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_marginEnd = "8dp"
        android:layout_marginStart = "8dp"
        android:layout_marginTop = "28dp"
        android:padding = "12dp"
        android:text = "@string/login_button_text"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintHorizontal_bias = "0.75"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/passInputLayout" />

    <!-- Google Login Button -->
    <com.google.android.gms.common.SignInButton
        android:id = "@+id/google_login_button"
        android:layout_width = "match_parent"
        android:layout_height = "@dimen/button_layout_height"
        android:layout_marginBottom = "8dp"
        android:layout_marginEnd = "8dp"
        android:layout_marginStart = "8dp"
        app:buttonSize = "wide"
        app:colorScheme = "dark"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/email_login_button"
        app:layout_constraintVertical_bias = "0.0" />





</android.support.constraint.ConstraintLayout>
